--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -9,9 +9,22 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        h1 {
+            text-align: center;
+        }
+
         table {
+            margin: auto;
             width: 500px;
             border-collapse: collapse;
+            position: relative;
+        }
+
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
         }
 
         td, th {
@@ -19,13 +32,32 @@
             padding: 10px;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: 0;
+            background-color: gray;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
         }
 
+        tbody tr:nth-child(evem) {
+            background-color: darkgray;
+        }
+        /* odd:Fazem as linhas impares ficarem com background
+           even: Faz nas linhas pares */
+        tbody tr:nth-child(odd) {
+             background-color: lightgray;
+        }
+
         td.num {
             text-align: right;
+        }
+
+        body p {
+            text-align: center;
         }
     </style>
 </head>
@@ -33,6 +65,7 @@
     <h1>Uso de tabelas grandes.</h1>
     <!-- ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPTION
             THEAD (GERALMENTE SE USA TH)
                 TR
                 TD
@@ -47,11 +80,12 @@
                 TH
     -->
     <table>
+        <caption>População das unidades federativas</caption>
         <thead>
             <tr>
-                <th>Posição</th>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col" style="width: 50px;">Posição</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 90px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -194,10 +228,36 @@
         <tfoot>
             <tr>
                 <td></td>
-                <th>Total de habitantes</th>
+                <th scope="row">Total de habitantes</th>
                 <td class="num"><strong>203 062 512</strong></td>
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae provident voluptates excepturi alias aliquam architecto nam ipsam, dolorem ipsa corporis, explicabo repellat. Beatae dolore delectus consequuntur fuga quos nobis iure.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aliquam at ipsum aliquid odit accusantium aspernatur magnam a delectus mollitia nostrum enim optio ipsa, ex voluptas nesciunt minima quidem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsum perspiciatis! Sapiente maiores nobis corporis deleniti, consectetur repellat vel. Harum ducimus aliquid voluptatibus beatae dolor voluptates architecto voluptatem rerum. Laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla similique cumque? Neque reprehenderit labore consequuntur laudantium, mollitia dignissimos itaque laboriosam fuga deserunt illo officiis qui at ducimus nesciunt voluptatibus!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae provident voluptates excepturi alias aliquam architecto nam ipsam, dolorem ipsa corporis, explicabo repellat. Beatae dolore delectus consequuntur fuga quos nobis iure.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aliquam at ipsum aliquid odit accusantium aspernatur magnam a delectus mollitia nostrum enim optio ipsa, ex voluptas nesciunt minima quidem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsum perspiciatis! Sapiente maiores nobis corporis deleniti, consectetur repellat vel. Harum ducimus aliquid voluptatibus beatae dolor voluptates architecto voluptatem rerum. Laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla similique cumque? Neque reprehenderit labore consequuntur laudantium, mollitia dignissimos itaque laboriosam fuga deserunt illo officiis qui at ducimus nesciunt voluptatibus!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae provident voluptates excepturi alias aliquam architecto nam ipsam, dolorem ipsa corporis, explicabo repellat. Beatae dolore delectus consequuntur fuga quos nobis iure.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aliquam at ipsum aliquid odit accusantium aspernatur magnam a delectus mollitia nostrum enim optio ipsa, ex voluptas nesciunt minima quidem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsum perspiciatis! Sapiente maiores nobis corporis deleniti, consectetur repellat vel. Harum ducimus aliquid voluptatibus beatae dolor voluptates architecto voluptatem rerum. Laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla similique cumque? Neque reprehenderit labore consequuntur laudantium, mollitia dignissimos itaque laboriosam fuga deserunt illo officiis qui at ducimus nesciunt voluptatibus!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae provident voluptates excepturi alias aliquam architecto nam ipsam, dolorem ipsa corporis, explicabo repellat. Beatae dolore delectus consequuntur fuga quos nobis iure.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aliquam at ipsum aliquid odit accusantium aspernatur magnam a delectus mollitia nostrum enim optio ipsa, ex voluptas nesciunt minima quidem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsum perspiciatis! Sapiente maiores nobis corporis deleniti, consectetur repellat vel. Harum ducimus aliquid voluptatibus beatae dolor voluptates architecto voluptatem rerum. Laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla similique cumque? Neque reprehenderit labore consequuntur laudantium, mollitia dignissimos itaque laboriosam fuga deserunt illo officiis qui at ducimus nesciunt voluptatibus!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae provident voluptates excepturi alias aliquam architecto nam ipsam, dolorem ipsa corporis, explicabo repellat. Beatae dolore delectus consequuntur fuga quos nobis iure.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aliquam at ipsum aliquid odit accusantium aspernatur magnam a delectus mollitia nostrum enim optio ipsa, ex voluptas nesciunt minima quidem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsum perspiciatis! Sapiente maiores nobis corporis deleniti, consectetur repellat vel. Harum ducimus aliquid voluptatibus beatae dolor voluptates architecto voluptatem rerum. Laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla similique cumque? Neque reprehenderit labore consequuntur laudantium, mollitia dignissimos itaque laboriosam fuga deserunt illo officiis qui at ducimus nesciunt voluptatibus!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae provident voluptates excepturi alias aliquam architecto nam ipsam, dolorem ipsa corporis, explicabo repellat. Beatae dolore delectus consequuntur fuga quos nobis iure.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aliquam at ipsum aliquid odit accusantium aspernatur magnam a delectus mollitia nostrum enim optio ipsa, ex voluptas nesciunt minima quidem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsum perspiciatis! Sapiente maiores nobis corporis deleniti, consectetur repellat vel. Harum ducimus aliquid voluptatibus beatae dolor voluptates architecto voluptatem rerum. Laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla similique cumque? Neque reprehenderit labore consequuntur laudantium, mollitia dignissimos itaque laboriosam fuga deserunt illo officiis qui at ducimus nesciunt voluptatibus!
+    </p>
+    <p><a href="tabela001.html">Ir para pagina1</a></p>
 </body>
 </html>
