--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -24,13 +24,8 @@
             text-align: center;
         }
 
-        table td {
-            background-color: lightgray;
-        }
-
         table caption {
             font-size: 1.5em;
-            background-color: gray;
             padding: 10px;
             font-weight: bold;
         }
@@ -42,15 +37,21 @@
         <caption>Filmes Favoritos
         </caption>
         <thead>
-            <tr style="background-color: darkgrey;">
-                <th scope="row">Grupo</th>
-                <th scope="row">Nomes</th>
-                <th colspan="3" scope="row">Filmes</th>
+            <tr>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <td>1000</td>
+            </tr>
+        </tfoot>
         <tbody>
             <tr>
-                <th rowspan="3" style="background-color: darkgray;" scope="col">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -69,7 +70,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th rowspan="3" style="background-color: darkgray;" scope="col">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocaveis</td>
                 <td>Amnésia</td>
