--- a/minhascriacoes/site02/index.html
+++ b/minhascriacoes/site02/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+        <h1>LATREL</h1>
+        <h2>TECH</h2>
     </header>
     <section>
             <section class="normal">
